<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_homework"
        android:icon="@drawable/homework"
        android:title="@string/title_Homework" />

    <item
        android:id="@+id/navigation_fees"
        android:icon="@drawable/fees"
        android:title="@string/title_Fees" />
    <item
        android:id="@+id/navigation_notice"
        android:icon="@drawable/email"
        android:title="@string/title_Notice" />
    <item
        android:id="@+id/navigation_Exam"
        android:icon="@drawable/exam"
        android:title="@string/title_Exam" />

</menu>
